--- a/templates/expense-create.html
+++ b/templates/expense-create.html
@@ -1,23 +1,10 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
+{% extends 'base.html' %}
 
-<body>
+{% block profile-link %}
+    <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
+{% endblock %}
 
-<nav>
-    <ul>
-        <li class="img"><img src="../static/images/dollar.png" alt="dollar img"></li>
-        <li><a href="/">Expenses Tracker</a></li>
-
-        <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
-
-    </ul>
-</nav>
-<div class="body">
+{% block content %}
 
     <h1>Create Expense</h1>
     <div class="form">
@@ -39,11 +26,4 @@
         </form>
     </div>
 
-</div>
-<footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
-
-
-</body>
-</html>
+{% endblock %}
