--- a/templates/expense-edit.html
+++ b/templates/expense-edit.html
@@ -1,47 +1,29 @@
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
+{% extends 'base.html' %}
 
-<body>
-    
-<nav>
-    <ul>
-        <li class="img"><img src="../static/images/dollar.png"></li>
-        <li><a href="/">Expenses Tracker</a></li>
-        
-        <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
-        
-    </ul>
-</nav>
-    <div class="body">
-        
-<h1>Edit Expense</h1>
-<div class="form">
-    <form method="POST">
-        {% csrf_token %}
-        <label for="name">Title</label>
-        {{ form.title }}
+{% block profile-link %}
+    <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
+{% endblock %}
 
-        <label for="description">Description</label>
-        {{ form.description }}
+{% block content %}
 
-        <label for="image_url">Link to Image</label>
-        {{ form.image_url }}
+    <h1>Edit Expense</h1>
+    <div class="form">
+        <form method="POST">
+            {% csrf_token %}
+            <label for="name">Title</label>
+            {{ form.title }}
 
-        <label for="price">Price</label>
-        {{ form.price }}
+            <label for="description">Description</label>
+            {{ form.description }}
 
-        <input type="submit" value="Edit">
-    </form>
-</div>
+            <label for="image_url">Link to Image</label>
+            {{ form.image_url }}
 
+            <label for="price">Price</label>
+            {{ form.price }}
+
+            <input type="submit" value="Edit">
+        </form>
     </div>
-    <footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
 
-
-</body></html>
+{% endblock %}
