--- a/templates/home-with-profile.html
+++ b/templates/home-with-profile.html
@@ -1,25 +1,10 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
+{% extends 'base.html' %}
 
-<body>
+{% block profile-link %}
+    <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
+{% endblock %}
 
-<nav>
-    <ul>
-        <li class="img"><img src="../static/images/dollar.png" alt="dollar image"></li>
-        <li><a href="{% url 'index' %}">Expenses Tracker</a></li>
-
-        <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
-
-    </ul>
-</nav>
-<div class="body">
-
-
+{% block content %}
     {% if expenses %}
         <div>
             <h1>Summary</h1>
@@ -68,11 +53,4 @@
         </div>
     {% endif %}
 
-</div>
-<footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
-
-
-</body>
-</html>
+{% endblock %}
