--- a/templates/profile-delete.html
+++ b/templates/profile-delete.html
@@ -1,23 +1,10 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
+{% extends 'base.html' %}
 
-<body>
+{% block profile-link %}
+    <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
+{% endblock %}
 
-<nav>
-    <ul>
-        <li class="img"><img src="../static/images/dollar.png"></li>
-        <li><a href="/">Expenses Tracker</a></li>
-
-        <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
-
-    </ul>
-</nav>
-<div class="body">
+{% block content %}
 
     <h1>Are you sure you want to delete your profile?</h1>
     <form method="POST">
@@ -25,11 +12,4 @@
         <button class="delete">Confirm</button>
     </form>
 
-</div>
-<footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
-
-
-</body>
-</html>
+{% endblock %}
