--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -1,44 +1,24 @@
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
+{% extends 'base.html' %}
 
-<body>
-    
-<nav>
-    <ul>
-        <li class="img"><img src="../static/images/dollar.png"></li>
-        <li><a href="/">Expenses Tracker</a></li>
-        
-        <li class="right"><a href="/profile">Profile</a></li>
-        
-    </ul>
-</nav>
-    <div class="body">
-        
-<h1>Enter your new data</h1>
-<div class="form">
-    <form method="POST">
-        {% csrf_token %}
-        <label for="budget">Budget</label>
-        {{ form.budget }}
+{% block profile-link %}
+    <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
+{% endblock %}
 
-        <label for="firstName">First Name</label>
-        {{ form.first_name }}
+{% block content %}
+    <h1>Enter your new data</h1>
+    <div class="form">
+        <form method="POST">
+            {% csrf_token %}
+            <label for="budget">Budget</label>
+            {{ form.budget }}
 
-        <label for="lastName">Last Name</label>
-        {{ form.last_name }}
+            <label for="firstName">First Name</label>
+            {{ form.first_name }}
 
-        <input type="submit" value="Edit">
-    </form>
-</div>
+            <label for="lastName">Last Name</label>
+            {{ form.last_name }}
 
+            <input type="submit" value="Edit">
+        </form>
     </div>
-    <footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
-
-
-</body></html>
+{% endblock %}
