--- a/templates/expense-delete.html
+++ b/templates/expense-delete.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-
 {% block profile-link %}
-    <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
+    <li class="right"><a href="{% url 'index profile' %}">Profile</a></li>
 {% endblock %}
 
 {% block content %}
