--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap);
+
 body {
     background: #f6f5f5;
     font-family: 'Lato', sans-serif;
@@ -191,4 +192,8 @@ footer {
 footer div {
     text-align: center;
     color: white;
+}
+
+small {
+    color: red;
 }
