--- a/templates/home-with-profile.html
+++ b/templates/home-with-profile.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-
 {% block profile-link %}
-    <li class="right"><a href="{% url 'show profile' %}">Profile</a></li>
+    <li class="right"><a href="{% url 'index profile' %}">Profile</a></li>
 {% endblock %}
 
 {% block content %}
@@ -10,15 +9,13 @@
             <h1>Summary</h1>
             <h1>
                 <ul class="expenses-list">
-                    <li class="blue">{{ profile.budget }}</li>
+                    <li class="blue">{{ profile.budget }}$</li>
 
                     {% for expense in expenses %}
-
                         <li class="red"> - {{ expense.price }}$</li>
-
                     {% endfor %}
 
-                    <li class="green">= {{ money_left }}$ left</li>
+                    <li class="green">= {{ profile.money_left }}$ left</li>
                 </ul>
             </h1>
         </div>
@@ -27,15 +24,15 @@
     <h1>My Expenses</h1>
     <a class="button" href="{% url 'create expense' %}">Add Expense</a>
 
-    {% if expenses %}
-        <div class="expenses-container">
 
+    <div class="expenses-container">
+
+        {% if expenses %}
             {% for expense in expenses %}
-
                 <div class="expense-container">
                     <h2>{{ expense.title }}</h2>
                     <hr>
-                    <img src="{{ expense.image_url }}" alt="expense image">
+                    <img src="{{ expense.image_url }}">
                     <p>{{ expense.description }}</p>
                     <div class="expense-detail">
                         <div>
@@ -47,10 +44,9 @@
                         </div>
                     </div>
                 </div>
-
             {% endfor %}
+        {% endif %}
 
-        </div>
-    {% endif %}
+    </div>
 
 {% endblock %}
